--- a/harjoituspaivakirja.master
+++ b/harjoituspaivakirja.master
@@ -27,13 +27,15 @@
                     
                         <div class="navbar-form navbar-right">
                             <div class="form-group">
-                                <input type="text" id="txtUserName" placeholder="Käyttäjätunnus" class="form-control"/>
+                                <asp:TextBox ID="txtKayttajatunnus" runat="server"></asp:TextBox>
+                               <!-- <input type="text" id="txtUserName" placeholder="Käyttäjätunnus" class="form-control"/> -->
                             </div>
                             <div class="form-group">
-                                <input type="password" id="txtPasswornd" placeholder="Salasana" class="form-control" />
+                                <asp:TextBox ID="txtSalasana" runat="server" TextMode="Password"></asp:TextBox>
+                                <!--<input type="password" id="txtPasswornd" placeholder="Salasana" class="form-control" />-->
                             </div>
-                            
-                                <button type="submit" class="btn btn-success"> Login</button>
+                             <!-- <asp:Button ID="Button1" runat="server" Text="Button" /> -->
+                                <asp:Button id="loginLogout" Text="Login" runat="server" type="submit" class="btn btn-success" OnClick="On_Click" ></asp:Button>
                             
                          </div>
                     
@@ -44,9 +46,9 @@
     <br />
     <br />
         <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
-        
+            
         </asp:ContentPlaceHolder>
-    
+    <asp:Label ID="lblDebug" runat="server" Text=""></asp:Label>
     </form>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
